crates/skopli-capi/include/skopli.h

typedef enum AgStatus AgStatus;
typedef int32_t AgStatus;
/**
 * The opaque pricing handle. Holds an immutable core [`Pricing`] instance
 * (injected catalogs + mode); constructed by [`ag_pricing_new`], freed by
 * [`ag_pricing_free`].
 */
typedef struct AgPricing AgPricing;
/**
 * A library-owned byte buffer handed out to the caller. `ptr` points at `len`
 * bytes of UTF-8 JSON (no trailing NUL); free it with [`ag_buf_free`]. A
 * zero/`len == 0` buffer has `ptr == null` and needs no free.
 */
typedef struct {
  /**
   * Pointer to the first byte, or null when `len == 0`.
   */
  uint8_t *ptr;
  /**
   * Length in bytes.
   */
  uintptr_t len;
} AgBuf;
/**
 * Look up a single model's price. `model`/`model_len` describe a bare UTF-8
 * model-name buffer (NOT JSON); a null or empty buffer is an invalid argument.
 * Writes a single `PriceLookup` JSON object (a `{priced:true, ...}` hit or a
 * `{priced:false, ...}` miss) to `*out`.
 *
 * # Safety
 * `pricing` is a live handle; `model`/`model_len` describe a readable buffer;
 * `out` is writable.
 */
AgStatus ag_pricing_lookup_model(const AgPricing *pricing,
                                 const char *model,
                                 uintptr_t model_len,
                                 AgBuf *out);
/**
 * Price a set of rollups. `rollups_json`/`rollups_len` describe a `Rollup[]`
 * JSON body, the same shape [`ag_rollup`] emits. Writes a `PricedRollup[]` JSON
 * buffer to `*out`: each element is the caller's original rollup object with a
 * `pricing` field attached (a hit with an optional `tieredAggregate`, or a
 * miss). Parse/catalog failures map to [`AgStatus::Catalog`].
 *
 * # Safety
 * `pricing` is a live handle; `rollups_json`/`rollups_len` describe a readable
 * buffer or (null, 0); `out` is writable.
 */
AgStatus ag_pricing_price_rollups(const AgPricing *pricing,
                                  const char *rollups_json,
                                  uintptr_t rollups_len,
                                  AgBuf *out);
/**
 * Write the provenance of the handle's catalogs as a `CatalogInfo[]` JSON
 * buffer to `*out`.
 *
 * # Safety
 * `pricing` is a live handle; `out` is writable.
 */
AgStatus ag_pricing_catalog_info(const AgPricing *pricing, AgBuf *out);
/**
 * Free a library-owned buffer previously returned in an `AgBuf* out`. Passing a
 * zero buffer (`ptr == null`) is a safe no-op. Double-freeing or freeing a
 * buffer the library did not produce is undefined behavior.
 *
 * # Safety
 * `buf` must be a buffer produced by this library and not yet freed, or the
 * empty buffer.
 */
void ag_buf_free(AgBuf buf);
/**
 * Free a library-owned C string previously returned via a `char** out`. Passing
 * null is a safe no-op.
 *
 * # Safety
 * `s` must be a string produced by this library (via `ag_last_error_message` or
 * `ag_default_cache_dir`) and not yet freed, or null.
 */
void ag_string_free(char *s);
/**
 * Write this thread's last error detail (a heap C string) to `*out`, or write
 * null when no error has been recorded on this thread. The written string is
 * library-owned; free it with [`ag_string_free`]. Returns
 * [`AgStatus::InvalidArgument`] if `out` is null.
 *
 * # Safety
 * `out` must be a valid, writable `*mut *mut c_char` or null.
 */
AgStatus ag_last_error_message(char **out);