sdks/java/src/main/java/com/skopli/ffi/Skopli.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_lookup_model(const AgPricing *pricing, const char *model, uintptr_t model_len, AgBuf *out)
     * }
     */
    public static FunctionDescriptor ag_pricing_lookup_model$descriptor() {
        return ag_pricing_lookup_model.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_lookup_model(const AgPricing *pricing, const char *model, uintptr_t model_len, AgBuf *out)
     * }
     */
    public static MethodHandle ag_pricing_lookup_model$handle() {
        return ag_pricing_lookup_model.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_lookup_model(const AgPricing *pricing, const char *model, uintptr_t model_len, AgBuf *out)
     * }
     */
    public static MemorySegment ag_pricing_lookup_model$address() {
        return ag_pricing_lookup_model.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_pricing_lookup_model(const AgPricing *pricing, const char *model, uintptr_t model_len, AgBuf *out)
     * }
     */
    public static int ag_pricing_lookup_model(MemorySegment pricing, MemorySegment model, long model_len, MemorySegment out) {
        var mh$ = ag_pricing_lookup_model.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_pricing_lookup_model", pricing, model, model_len, out);
            }
            return (int)mh$.invokeExact(pricing, model, model_len, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_pricing_price_rollups {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_pricing_price_rollups");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_price_rollups(const AgPricing *pricing, const char *rollups_json, uintptr_t rollups_len, AgBuf *out)
     * }
     */
    public static FunctionDescriptor ag_pricing_price_rollups$descriptor() {
        return ag_pricing_price_rollups.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_price_rollups(const AgPricing *pricing, const char *rollups_json, uintptr_t rollups_len, AgBuf *out)
     * }
     */
    public static MethodHandle ag_pricing_price_rollups$handle() {
        return ag_pricing_price_rollups.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_price_rollups(const AgPricing *pricing, const char *rollups_json, uintptr_t rollups_len, AgBuf *out)
     * }
     */
    public static MemorySegment ag_pricing_price_rollups$address() {
        return ag_pricing_price_rollups.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_pricing_price_rollups(const AgPricing *pricing, const char *rollups_json, uintptr_t rollups_len, AgBuf *out)
     * }
     */
    public static int ag_pricing_price_rollups(MemorySegment pricing, MemorySegment rollups_json, long rollups_len, MemorySegment out) {
        var mh$ = ag_pricing_price_rollups.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_pricing_price_rollups", pricing, rollups_json, rollups_len, out);
            }
            return (int)mh$.invokeExact(pricing, rollups_json, rollups_len, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_pricing_catalog_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_pricing_catalog_info");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_catalog_info(const AgPricing *pricing, AgBuf *out)
     * }
     */
    public static FunctionDescriptor ag_pricing_catalog_info$descriptor() {
        return ag_pricing_catalog_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_catalog_info(const AgPricing *pricing, AgBuf *out)
     * }
     */
    public static MethodHandle ag_pricing_catalog_info$handle() {
        return ag_pricing_catalog_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_catalog_info(const AgPricing *pricing, AgBuf *out)
     * }
     */
    public static MemorySegment ag_pricing_catalog_info$address() {
        return ag_pricing_catalog_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_pricing_catalog_info(const AgPricing *pricing, AgBuf *out)
     * }
     */
    public static int ag_pricing_catalog_info(MemorySegment pricing, MemorySegment out) {
        var mh$ = ag_pricing_catalog_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_pricing_catalog_info", pricing, out);
            }
            return (int)mh$.invokeExact(pricing, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_buf_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            AgBuf.layout()
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_buf_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void ag_buf_free(AgBuf buf)
     * }
     */
    public static FunctionDescriptor ag_buf_free$descriptor() {
        return ag_buf_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void ag_buf_free(AgBuf buf)
     * }
     */
    public static MethodHandle ag_buf_free$handle() {
        return ag_buf_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void ag_buf_free(AgBuf buf)
     * }
     */
    public static MemorySegment ag_buf_free$address() {
        return ag_buf_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void ag_buf_free(AgBuf buf)
     * }
     */
    public static void ag_buf_free(MemorySegment buf) {
        var mh$ = ag_buf_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_buf_free", buf);
            }
            mh$.invokeExact(buf);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_string_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_string_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void ag_string_free(char *s)
     * }
     */
    public static FunctionDescriptor ag_string_free$descriptor() {
        return ag_string_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void ag_string_free(char *s)
     * }
     */
    public static MethodHandle ag_string_free$handle() {
        return ag_string_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void ag_string_free(char *s)
     * }
     */
    public static MemorySegment ag_string_free$address() {
        return ag_string_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void ag_string_free(char *s)
     * }
     */
    public static void ag_string_free(MemorySegment s) {
        var mh$ = ag_string_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_string_free", s);
            }
            mh$.invokeExact(s);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_last_error_message {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_last_error_message");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_last_error_message(char **out)
     * }
     */
    public static FunctionDescriptor ag_last_error_message$descriptor() {
        return ag_last_error_message.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_last_error_message(char **out)
     * }
     */
    public static MethodHandle ag_last_error_message$handle() {
        return ag_last_error_message.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_last_error_message(char **out)
     * }
     */
    public static MemorySegment ag_last_error_message$address() {
        return ag_last_error_message.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_last_error_message(char **out)
     * }
     */
    public static int ag_last_error_message(MemorySegment out) {
        var mh$ = ag_last_error_message.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_last_error_message", out);
            }
            return (int)mh$.invokeExact(out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
}

